# tg-bot-hotel-reservation-system

./: .dockerignore  .gitattributes  LICENSE  README.md
bot/: .env.template  Dockerfile  Dockerfile.bot  alembic.ini  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
bot/config/: config.py
bot/database/: mongo.py  postgres.py  redis.py  session.py
bot/database/crud/: users.py
bot/database/models/: bar.py  booking.py  review.py  room.py  user.py
bot/docker/: docker-compose.yml
bot/handlers/admin/: admin_panel.py  auth.py  login.py  reviews.py  rooms.py  start.py
bot/handlers/user/: booking.py  feedback.py  start.py
bot/keyboards/: admin.py  user.py
bot/middlewares/: db_session.py
bot/migrations/: env.py
bot/models/: mongo_models.py  postgres_models.py
bot/services/: mongo_database.py  postgres_database.py
bot/services/mongo_crud/: review_crud.py
bot/services/postgres_crud/: booking_crud.py  room_crud.py  user_crud.py
scripts/: build.sh  down.sh
