[project]
name = "tg-bot-hotel-reservation-system"
version = "0.1.0"
description = ""
authors = [
    {name = "Moroz Roman",email = "morozdef24@gmail.com"}
]
license = {text = "MIT"}
readme = "../README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram (>=3.4,<4.0)",
    "motor (>=3.7.0,<4.0.0)",
    "redis (>=6.1.0,<7.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "psycopg[binary] (>=3.2.9,<4.0.0)",
    "sqlalchemy[asyncio] (>=2.0.40,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
alembic = "^1.15.2"
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.15.0"
types-redis = "^4.6.0.20241004"

